@@ -50,6 +50,7 @@ extern Tcl_ObjCmdProc
     NsTclAdpBreakObjCmd,
     NsTclAdpCloseObjCmd,
     NsTclAdpCompressObjCmd,
+    NsTclAdpDebugObjCmd,
     NsTclAdpInfoObjCmd,
     NsTclAdpCtlObjCmd,
     NsTclAdpDirObjCmd,
@@ -67,7 +68,6 @@ extern Tcl_ObjCmdProc
     NsTclAdpRegisterScriptObjCmd,
     NsTclAdpReturnObjCmd,
     NsTclAdpSafeEvalObjCmd,
-    NsTclAdpStreamObjCmd,
     NsTclAdpTellObjCmd,
     NsTclAdpTruncObjCmd,
     NsTclAtCloseObjCmd,
@@ -223,7 +223,6 @@ extern Tcl_ObjCmdProc
     NsTclFileStatObjCmd;
 
 extern Tcl_CmdProc
-    NsTclAdpDebugCmd,
     NsTclAdpStatsCmd,
     NsTclConfigCmd,
     NsTclConfigSectionCmd,
@@ -370,18 +369,19 @@ static Cmd servCmds[] = {
     {"_ns_adp_include", NULL, NsTclAdpIncludeObjCmd},
     {"ns_adp_abort", NULL, NsTclAdpAbortObjCmd},
     {"ns_adp_append", NULL, NsTclAdpAppendObjCmd},
+    {"ns_adp_close", NULL, NsTclAdpCloseObjCmd},
     {"ns_adp_ctl", NULL, NsTclAdpCtlObjCmd},
     {"ns_adp_argc", NULL, NsTclAdpArgcObjCmd},
     {"ns_adp_argv", NULL, NsTclAdpArgvObjCmd},
     {"ns_adp_bind_args", NULL, NsTclAdpBindArgsObjCmd},
     {"ns_adp_break", NULL, NsTclAdpBreakObjCmd},
     {"ns_adp_info", NULL, NsTclAdpInfoObjCmd},
-    {"ns_adp_compress", NULL, NsTclAdpCompressObjCmd},
-    {"ns_adp_debug", NsTclAdpDebugCmd, NULL},
+    {"ns_adp_debug", NULL, NsTclAdpDebugObjCmd},
     {"ns_adp_dir", NULL, NsTclAdpDirObjCmd},
     {"ns_adp_dump", NULL, NsTclAdpDumpObjCmd},
     {"ns_adp_eval", NULL, NsTclAdpEvalObjCmd},
     {"ns_adp_exception", NULL, NsTclAdpExceptionObjCmd},
+    {"ns_adp_flush", NULL, NsTclAdpFlushObjCmd},
     {"ns_adp_mime", NULL, NsTclAdpMimeTypeObjCmd},
     {"ns_adp_mimetype", NULL, NsTclAdpMimeTypeObjCmd},
     {"ns_adp_parse", NULL, NsTclAdpParseObjCmd},
@@ -394,7 +394,6 @@ static Cmd servCmds[] = {
     {"ns_adp_return", NULL, NsTclAdpReturnObjCmd},
     {"ns_adp_safeeval", NULL, NsTclAdpSafeEvalObjCmd},
     {"ns_adp_stats", NsTclAdpStatsCmd, NULL},
-    {"ns_adp_stream", NULL, NsTclAdpStreamObjCmd},
     {"ns_adp_tell", NULL, NsTclAdpTellObjCmd},
     {"ns_adp_trunc", NULL, NsTclAdpTruncObjCmd},
     {"ns_atclose", NULL, NsTclAtCloseObjCmd},
